test/zinc_source/compile_errors/callables/09_callable_set_element_insert.zn
// expected-error: callables cannot be used as set elements
fn inc(x) {
    return x + 1
}

fn main() {
    values = {1}
    values.insert(inc)
    print(values.len())
}
